Examples examples examples

--- a/src/app/form-example/form-example.component.html
+++ b/src/app/form-example/form-example.component.html
@@ -1,5 +1,5 @@
 <div class="columns">
-  <form [formGroup]="formInstance" (ngSubmit)="onFormSubmit()">
+  <form class="column" [formGroup]="formInstance" (ngSubmit)="onFormSubmit()">
     <div class="field">
       <label for="textInput" class="label"> Simple text input</label>
       <input class="control" type="text" formControlName="textInput" />
@@ -16,15 +16,21 @@
     <div class="field">
       <label class="label" for="textControlInput"> Text input as a FormControl</label>
       <input class="control" type="text" [formControl]="formInstance.get('textControlInput')" />
-      <p class="help is-danger" *ngIf="formInstance.get('textControlInput').errors?.required">Another Text Input is required</p>
+      <p class="help is-danger" *ngIf="formInstance.get('textControlInput').errors?.required">Another Text Input is
+        required</p>
     </div>
+    <app-custom-form-control ngDefaultControl [formControl]="formInstance.get('childControl')"></app-custom-form-control>
+    <app-complex-form-control ngDefaultControl [formGroup]="formInstance.get('complexApplicant')"></app-complex-form-control>
+    <app-complex-form-array [arrayName]="'inventors'"></app-complex-form-array>
     <div *ngIf="formInstance.invalid">
       <p>Form is invalid, however, Parent formInstance.errors is : </p>
       <p>{{ formInstance.errors | json }} => Why ? This is by design. FormGroup only shows</p>
       <p>Validation can be found inside each control instance</p>
 
     </div>
-
+    <button class="button" type="submit" [disabled]="formInstance.invalid">Submit</button>
+  </form>
+  <div class="column">
     <div class="card">
       <div class="card-header">
         <div class="card-header-title">
@@ -35,6 +41,5 @@
         {{ formInstance.value | json }}
       </div>
     </div>
-    <button class="button" type="submit" [disabled]="formInstance.invalid">Submit</button>
-  </form>
+  </div>
 </div>
