--- a/src/app/custom-form-control/custom-form-control.component.html
+++ b/src/app/custom-form-control/custom-form-control.component.html
@@ -1,4 +1,6 @@
 <div class="field">
   <label for="input" class="label"> FormControl as Component</label>
-  <input class="control" type="text" [formControl]="formInstance" />
+  <div class="control">
+    <input class="input" type="text" [formControl]="formInstance" />
+  </div>
 </div>
