--- a/src/app/complex-form-control/complex-form-control.component.html
+++ b/src/app/complex-form-control/complex-form-control.component.html
@@ -1,12 +1,12 @@
 <div class="field">
-  <form class="columns" [formGroup]="formInstance">
+  <div [formGroup]="formInstance">
     <div class="field">
       <label for="name" class="label">Name</label>
-      <input type="text" class="control" formControlName="name" />
+      <input type="text" class="input" formControlName="name" />
     </div>
     <div class="field">
       <label for="age" class="label">Age</label>
-      <input type="number" class="control" formControlName="age" />
+      <input type="number" class="input" formControlName="age" />
     </div>
-  </form>
+  </div>
 </div>
